[metadata]
name = rick_roll
version = 0.0.3
author = Aanya Agrawal
description = Module for your rickrolling needs which will never let you down.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/screechingviolet/rick-roll
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
py_modules = rick_roll
python_requires = >=3.7
include_package_data = True